--- a/frontend/src/components/Layout/Footer/Footer.css
+++ b/frontend/src/components/Layout/Footer/Footer.css
@@ -2,7 +2,7 @@
 
 
 footer {
-    margin-top: 2vmax;
+    margin-top: auto;
     padding: 2vmax;
     background-color: rgb(34, 33, 33);
     color: white;
